# jira-proxy-for-jetbrains-tasks

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_main.http
.claude/: settings.local.json
app/: config.py  error_handlers.py  exceptions.py  main.py  middleware.py  utils.py
app/models/: jira.py
app/routers/: jira_api.py  latest_api.py
app/services/: jira_client.py
